# PlantCareAI

./: .gitignore  README.md  houseplant_species_down.ipynb  pyproject.toml  train_efficientnet_B3.py
임태나/: .gitignore  CLAUDE.md  GUIDE.md  GUIDE_clip.md  GUIDE_master.md  GUIDE_master_v2.md  GUIDE_selfcare.md  README.md  RESULT.md  app_relationship.py  config.py  download.py  plant.ipynb  pyproject.toml  test.ipynb
임태나/data/: care_log.jsonl  care_tips.json  clip_conditions.json  diseases.json  plant_care.db  plants.json
임태나/docs/: accuracy_report.json  accuracy_report.md  api-spec.md  architecture.md  boonz_complete_guide.md  boonz_selfcare_direction.md  boonz_service_flow_final.md  boonz_tone_guide_v3.md  data-strategy.md  docs-brand-essence.md  docs-coding-order.md  docs-llm-prompt.md  docs-sprint-plan-v4.md  failure_cases.md  learning_guide.md  learning_supplement.md  model-architecture.md  model_comparison.md  reverse_engineering_guide.md  tone-guide.md
임태나/mcp_server/: plant_db_server.py
임태나/mockup/: 01_main_home (1).html  02_diagnosis.html  03_history_story.html  04_pattern_analysis (1).html  05_growth_journey (1).html  06_day1_vs_30.html
임태나/mockup_v2/: 01_onboarding.html  02_home_new.html  03_home_30days.html  04_diagnosis_result.html  05_diagnosis_chat.html  06_history_diary.html  07_history_report.html  08_history_journey.html  09_day1_vs_30.html  convert_to_png.py
임태나/scripts/: generate_demo_data.py  init_db.py  inspect_dom.py  screenshot.py
임태나/src/: config.py  mcp_client.py
임태나/src/api/: main.py  schemas.py
임태나/src/data/: clip_filter.py  dataset.py  day9_pipeline.py  download.py  ncpms.py  preprocess.py  remap_labels.py  scrape_images.py
임태나/src/frontend/: app.py  app_final.py
임태나/src/inference/: clip_analyzer.py  diagnose.py  (+4 more)
임태나/tests/: test_diagnosis_improvements.py  test_e2e.py  test_integration.py
(+13 files in other folders)
